--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 
     <section id="episodes" class="episodios">
 
-        <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
             <polygon fill="white" points=" 0,100 0,0 100,0 "/>
-        </svg> -->
+        </svg>
+        
         <div class="content">
 
            
@@ -72,9 +73,9 @@
 
         </div>
 
-       <!--  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
             <polygon fill="white" points="0 ,100 100,0 100,100"/>
-          </svg> -->
+        </svg>
 
     </section>
 
