--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <section id="episodes" class="episodios">
 
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-            <polygon fill="white" points=" 0,100 0,0 100,0 "/>
+            <polygon fill="white" points=" 0,100 0,0 100,0 " />
         </svg>
-        
+
         <div class="content">
 
-           
+
 
             <h2>Episodios</h2>
 
@@ -73,8 +73,8 @@
 
         </div>
 
-       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-            <polygon fill="white" points="0 ,100 100,0 100,100"/>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+            <polygon fill="white" points="0,100 100,0 100,100" />
         </svg>
 
     </section>
@@ -142,6 +142,10 @@
     </section>
 
     <section class="news">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+            <polygon fill="white" points=" 0,100 0,0 100,0 " />
+        </svg>
+
         <div>
             <h2>¿Querés las últimas novedades?</h2>
 
