--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Proyecto Podcast</title>
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -31,7 +31,7 @@
 
     <section class="intro">
 
-        <h1 class="texto">Hello <s>world</s> pale blue dot<span class="blue_dot">.</span></h1>
+        <h1 class="text">Hello <s>world</s> pale blue dot<span class="blue_dot">.</span></h1>
 
         <p>El portal de podcasts que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los
             jueves cada 15 días.</p>
@@ -50,23 +50,21 @@
 
         <div class="content">
 
-
-
             <h2>Episodios</h2>
 
             <div>
-                <iframe class="its_just" src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt"
+                <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt"
                     allow="encrypted-media"></iframe>
-                <iframe class="rework" src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
+                <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
                     allow="encrypted-media"></iframe>
 
             </div>
 
             <div>
 
-                <iframe class="the_fund" src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt"
+                <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt"
                     allow="encrypted-media"></iframe>
-                <iframe class="ruby" src="https://open.spotify.com/embed-podcast/episode/7h3hED0Fb2FN3xg709Y0rL"
+                <iframe src="https://open.spotify.com/embed-podcast/episode/7h3hED0Fb2FN3xg709Y0rL"
                     allow="encrypted-media"></iframe>
 
             </div>
@@ -82,9 +80,7 @@
     <!-- Seccion De donde venimos -->
 
     <section id="us" class="de_donde_venimos">
-
         <img class="phone" src="/images/phone.png" alt="">
-
         <div class="texto">
             <h2>De dónde venimos</h2>
             <p>
@@ -95,14 +91,10 @@
                 there is no hint that help will come from elsewhere to save us from ourselves.
             </p>
         </div>
-
-
     </section>
 
     <section id="interviews" class="invitados">
-
         <h2>Invitadas/os estelares</h2>
-
         <div class="invitados_img">
             <img src="/images/grace-hopper.png" alt="Grace Hopper">
             <img src="/images/Katie-Bouman.png" alt="Katie Bouman">
@@ -116,9 +108,7 @@
     </section>
 
     <section id="topics" class="nuestros_temas">
-
         <h2>Algunos de nuestros temas</h2>
-
         <div class="icon_group">
             <div>
                 <img class="icon" src="/images/icon1.svg" alt="">
@@ -136,28 +126,20 @@
                 <img class="icon" src="/images/icon4.svg" alt="">
                 <p>Seguridad informática</p>
             </div>
-
         </div>
-
     </section>
 
     <section class="news">
-
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
             <polygon fill="white" points=" 0,100 0,0 100,0 " />
         </svg>
-
         <div>
             <h2>¿Querés las últimas novedades?</h2>
-
             <button class="button_episodes">ESCUCHÁ LOS EPISODIOS</button>
         </div>
-
-
     </section>
 
     <footer>
-
         <div class="paragraph">
             <p>© 2019— Hello blue pale dot </p>
         </div>
@@ -167,11 +149,8 @@
             <a href="https://twitter.com/?lang=es" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://telegram.org/" target="_blank"><i class="fab fa-telegram"></i></a>
-
         </div>
-
     </footer>
-
 
 </body>
 
