media query (menu e imagenes)

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
     <header>
         <nav>
+            <label for="toggle">&#9776;</label>
+            <input type="checkbox" id="toggle">
             <img class="logo" src="images/logo.svg" alt="logo de la empresa">
-            <ul>
+            <ul class="menu">
                 <li> <a href="#episodes">EPISODIOS</a> </li>
                 <li> <a href="#us">NOSOTROS</a></li>
                 <li> <a href="#interviews">ENTREVISTAS</a></li>
@@ -95,7 +97,7 @@
 
     <section id="interviews" class="invitados">
         <h2>Invitadas/os estelares</h2>
-        <div class="invitados_img">
+        <div>
             <img src="/images/grace-hopper.png" alt="Grace Hopper">
             <img src="/images/Katie-Bouman.png" alt="Katie Bouman">
             <img src="/images/Margaret_Hamilton.png" alt="Margaret Hamilton">
