--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header>
         <nav>
-            <label for="toggle">&#9776;</label>
+            <label for="toggle"></label>
             <input type="checkbox" id="toggle">
             <img class="logo" src="images/logo.svg" alt="logo de la empresa">
             <ul class="menu">
