style para mobile de 320px

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section id="episodes" class="episodios">
 
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+        <svg class="top" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
             <polygon fill="white" points=" 0,100 0,0 100,0 " />
         </svg>
 
@@ -73,7 +73,7 @@
 
         </div>
 
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+        <svg class="bottom" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
             <polygon fill="white" points="0,100 100,0 100,100" />
         </svg>
 
