menu hamburguesa semi funcionando

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 
     <header>
-        <nav>
-            <label for="toggle"></label>
+        <nav class="menu_mobile">
             <input type="checkbox" id="toggle">
-            <img class="logo" src="images/logo.svg" alt="logo de la empresa">
+            <label for="toggle"></label>
+            <img class="logo" src="images/logo.svg" alt="logo del canal de podcasts">
             <ul class="menu">
                 <li> <a href="#episodes">EPISODIOS</a> </li>
                 <li> <a href="#us">NOSOTROS</a></li>
