terminando de dimensionar en mobile

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2>Episodios</h2>
 
             <div>
-                <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt"
+                <iframe class="first" src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt"
                     allow="encrypted-media"></iframe>
                 <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
                     allow="encrypted-media"></iframe>
@@ -118,7 +118,7 @@
             </div>
             <div>
                 <img class="icon" src="/images/icon2.svg" alt="">
-                <p>Repensando la programación</p>
+                <p>Repensando <br> la programación</p>
             </div>
             <div>
                 <img class="icon" src="/images/icon3.svg" alt="">
