--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="menu_mobile">
             <input type="checkbox" id="toggle">
             <label for="toggle"></label>
-            <img class="logo" src="images/logo.svg" alt="logo del canal de podcasts">
+            <img class="logo" src="images/logo.svg" alt="logo circular color azul con las letras bd en el centro.">
             <ul class="menu">
                 <li> <a href="#episodes">EPISODIOS</a> </li>
                 <li> <a href="#us">NOSOTROS</a></li>
@@ -55,7 +55,7 @@
             <h2>Episodios</h2>
 
             <div>
-                <iframe class="first" src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt"
+                <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt"
                     allow="encrypted-media"></iframe>
                 <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
                     allow="encrypted-media"></iframe>
@@ -82,7 +82,7 @@
     <!-- Seccion De donde venimos -->
 
     <section id="us" class="de_donde_venimos">
-        <img class="phone" src="/images/phone.png" alt="">
+        <img class="phone" src="/images/phone.png" alt="celular blanco con una imagen que imita la pagina de un periodico.">
         <div class="texto">
             <h2>De dónde venimos</h2>
             <p>
@@ -102,9 +102,9 @@
             <img src="/images/Katie-Bouman.png" alt="Katie Bouman">
             <img src="/images/Margaret_Hamilton.png" alt="Margaret Hamilton">
             <img src="/images/An-E.R.A.Univac-1103-computer-in-the-1950s.png"
-                alt="An E.R.A.Univac 1103 computer in the 1950s">
+                alt="una computadora era 1103 en los años 50">
             <img src="/images/Computer-operators-with-an-Eniac—-the-world’s-first-programmable-general-purpose-computer.png"
-                alt="Computer operators with an Eniac — the world’s first programmable general-purpose computer">
+                alt="varias operadoras con una computadora eniac, la primera computadora programable.">
             <img src="/images/susan-kare.png" alt="Susan Kare">
         </div>
     </section>
@@ -113,19 +113,19 @@
         <h2>Algunos de nuestros temas</h2>
         <div class="icon_group">
             <div>
-                <img class="icon" src="/images/icon1.svg" alt="">
+                <img class="icon" src="/images/icon1.svg" alt="icono de trabajo remoto">
                 <p>Trabajo remoto</p>
             </div>
             <div>
-                <img class="icon" src="/images/icon2.svg" alt="">
+                <img class="icon" src="/images/icon2.svg" alt="icono de una persona pensando">
                 <p>Repensando <br> la programación</p>
             </div>
             <div>
-                <img class="icon" src="/images/icon3.svg" alt="">
+                <img class="icon" src="/images/icon3.svg" alt="icono de una notebook">
                 <p>Bases del código</p>
             </div>
             <div>
-                <img class="icon" src="/images/icon4.svg" alt="">
+                <img class="icon" src="/images/icon4.svg" alt="icono de un seguridad informatica">
                 <p>Seguridad informática</p>
             </div>
         </div>
