--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Seccion De donde venimos -->
 
     <section id="us" class="de_donde_venimos">
-        <img class="phone" src="/images/phone.png" alt="celular blanco con una imagen que imita la pagina de un periodico.">
+        <img class="phone" src="images/phone.png" alt="celular blanco con una imagen que imita la pagina de un periodico.">
         <div class="texto">
             <h2>De dónde venimos</h2>
             <p>
@@ -98,14 +98,14 @@
     <section id="interviews" class="invitados">
         <h2>Invitadas/os estelares</h2>
         <div>
-            <img src="/images/grace-hopper.png" alt="Grace Hopper">
-            <img src="/images/Katie-Bouman.png" alt="Katie Bouman">
-            <img src="/images/Margaret_Hamilton.png" alt="Margaret Hamilton">
-            <img src="/images/An-E.R.A.Univac-1103-computer-in-the-1950s.png"
+            <img src="images/grace-hopper.png" alt="Grace Hopper">
+            <img src="images/Katie-Bouman.png" alt="Katie Bouman">
+            <img src="images/Margaret_Hamilton.png" alt="Margaret Hamilton">
+            <img src="images/An-E.R.A.Univac-1103-computer-in-the-1950s.png"
                 alt="una computadora era 1103 en los años 50">
-            <img src="/images/Computer-operators-with-an-Eniac—-the-world’s-first-programmable-general-purpose-computer.png"
+            <img src="images/Computer-operators-with-an-Eniac—-the-world’s-first-programmable-general-purpose-computer.png"
                 alt="varias operadoras con una computadora eniac, la primera computadora programable.">
-            <img src="/images/susan-kare.png" alt="Susan Kare">
+            <img src="images/susan-kare.png" alt="Susan Kare">
         </div>
     </section>
 
@@ -113,19 +113,19 @@
         <h2>Algunos de nuestros temas</h2>
         <div class="icon_group">
             <div>
-                <img class="icon" src="/images/icon1.svg" alt="icono de trabajo remoto">
+                <img class="icon" src="images/icon1.svg" alt="icono de trabajo remoto">
                 <p>Trabajo remoto</p>
             </div>
             <div>
-                <img class="icon" src="/images/icon2.svg" alt="icono de una persona pensando">
+                <img class="icon" src="images/icon2.svg" alt="icono de una persona pensando">
                 <p>Repensando <br> la programación</p>
             </div>
             <div>
-                <img class="icon" src="/images/icon3.svg" alt="icono de una notebook">
+                <img class="icon" src="images/icon3.svg" alt="icono de una notebook">
                 <p>Bases del código</p>
             </div>
             <div>
-                <img class="icon" src="/images/icon4.svg" alt="icono de un seguridad informatica">
+                <img class="icon" src="images/icon4.svg" alt="icono de un seguridad informatica">
                 <p>Seguridad informática</p>
             </div>
         </div>
